--- a/_publications/bib/al2016simple.bib
+++ b/_publications/bib/al2016simple.bib
@@ -1,1 +1,7 @@
-b"@inproceedings{al2016simple,\n author = {Al-Hameed, Sabah and Benaissa, Mohammed and Christensen, Heidi},\n booktitle = {Workshop on Spoken Language Processing for Assistive Technology (SLPAT-2016)},\n title = {Simple and robust audio-based detection of biomarkers for Alzheimer's disease},\n year = {2016}\n}\n\n"
+@inproceedings{al2016simple,
+ author = {Al-Hameed, Sabah and Benaissa, Mohammed and Christensen, Heidi},
+ booktitle = {Workshop on Spoken Language Processing for Assistive Technology (SLPAT-2016)},
+ title = {Simple and robust audio-based detection of biomarkers for Alzheimer's disease},
+ year = {2016}
+}
+
