--- a/_publications/bib/alhinti2018towards.bib
+++ b/_publications/bib/alhinti2018towards.bib
@@ -1,1 +1,8 @@
-b'@inproceedings{alhinti2018towards,\n author = {Alhinti, L and Christensen, H and Cunningham, S},\n booktitle = {Proceedings of WSPD 2018},\n organization = {Sheffield},\n title = {Towards the understanding of communicating emotions for people with dysarthria},\n year = {2018}\n}\n\n'
+@inproceedings{alhinti2018towards,
+ author = {Alhinti, L and Christensen, H and Cunningham, S},
+ booktitle = {Proceedings of WSPD 2018},
+ organization = {Sheffield},
+ title = {Towards the understanding of communicating emotions for people with dysarthria},
+ year = {2018}
+}
+
