--- a/_publications/bib/alsaleh2016brain.bib
+++ b/_publications/bib/alsaleh2016brain.bib
@@ -1,1 +1,9 @@
-b'@inproceedings{alsaleh2016brain,\n author = {AlSaleh, Mashael M and Arvaneh, Mahnaz and Christensen, Heidi and Moore, Roger K},\n booktitle = {2016 Asia-Pacific Signal and Information Processing Association Annual Summit and Conference (APSIPA)},\n organization = {IEEE},\n pages = {1--5},\n title = {Brain-computer interface technology for speech recognition: A review},\n year = {2016}\n}\n\n'
+@inproceedings{alsaleh2016brain,
+ author = {AlSaleh, Mashael M and Arvaneh, Mahnaz and Christensen, Heidi and Moore, Roger K},
+ booktitle = {2016 Asia-Pacific Signal and Information Processing Association Annual Summit and Conference (APSIPA)},
+ organization = {IEEE},
+ pages = {1--5},
+ title = {Brain-computer interface technology for speech recognition: A review},
+ year = {2016}
+}
+
