--- a/_publications/bib/alsaleh2018examining.bib
+++ b/_publications/bib/alsaleh2018examining.bib
@@ -1,1 +1,9 @@
-b'@inproceedings{alsaleh2018examining,\n author = {Alsaleh, Mashael and Moore, Roger and Christensen, Heidi and Arvaneh, Mahnaz},\n booktitle = {2018 IEEE International Conference on Systems, Man, and Cybernetics (SMC)},\n organization = {IEEE},\n pages = {976--981},\n title = {Examining Temporal Variations in Recognizing Unspoken Words Using EEG Signals},\n year = {2018}\n}\n\n'
+@inproceedings{alsaleh2018examining,
+ author = {Alsaleh, Mashael and Moore, Roger and Christensen, Heidi and Arvaneh, Mahnaz},
+ booktitle = {2018 IEEE International Conference on Systems, Man, and Cybernetics (SMC)},
+ organization = {IEEE},
+ pages = {976--981},
+ title = {Examining Temporal Variations in Recognizing Unspoken Words Using EEG Signals},
+ year = {2018}
+}
+
