--- a/_publications/bib/arnaud2008cava.bib
+++ b/_publications/bib/arnaud2008cava.bib
@@ -1,1 +1,8 @@
-b"@inproceedings{arnaud2008cava,\n author = {Arnaud, Elise and Christensen, Heidi and Lu, Yan-Chen and Barker, Jon and Khalidov, Vasil and Hansard, Miles and Holveck, Bertrand and Mathieu, Herv{\\'e} and Narasimha, Ramya and Taillant, Elise and others},\n booktitle = {Proceedings of the 10th international conference on Multimodal interfaces},\n pages = {109--116},\n title = {The CAVA corpus: synchronised stereoscopic and binaural datasets with head movements},\n year = {2008}\n}\n\n"
+@inproceedings{arnaud2008cava,
+ author = {Arnaud, Elise and Christensen, Heidi and Lu, Yan-Chen and Barker, Jon and Khalidov, Vasil and Hansard, Miles and Holveck, Bertrand and Mathieu, Herv{\'e} and Narasimha, Ramya and Taillant, Elise and others},
+ booktitle = {Proceedings of the 10th international conference on Multimodal interfaces},
+ pages = {109--116},
+ title = {The CAVA corpus: synchronised stereoscopic and binaural datasets with head movements},
+ year = {2008}
+}
+
