--- a/_publications/bib/atria2018embedding.bib
+++ b/_publications/bib/atria2018embedding.bib
@@ -1,1 +1,10 @@
-b"@inproceedings{atria2018embedding,\n author = {Atria, Jos{\\'e} Joaqu{\\i}n and Rudzicz, Frank and Malavasi, Massimiliano and Desideri, Lorenzo},\n booktitle = {Intelligent Tutoring Systems: 14th International Conference, ITS 2018, Montreal, QC, Canada, June 11--15, 2018, Proceedings},\n organization = {Springer},\n pages = {421},\n title = {Embedding Speech Technology into Intelligent Tutoring Systems Using the CloudCAST Speech Technology Platform},\n volume = {10858},\n year = {2018}\n}\n\n"
+@inproceedings{atria2018embedding,
+ author = {Atria, Jos{\'e} Joaqu{\i}n and Rudzicz, Frank and Malavasi, Massimiliano and Desideri, Lorenzo},
+ booktitle = {Intelligent Tutoring Systems: 14th International Conference, ITS 2018, Montreal, QC, Canada, June 11--15, 2018, Proceedings},
+ organization = {Springer},
+ pages = {421},
+ title = {Embedding Speech Technology into Intelligent Tutoring Systems Using the CloudCAST Speech Technology Platform},
+ volume = {10858},
+ year = {2018}
+}
+
