--- a/_publications/bib/blackburn2017avatar.bib
+++ b/_publications/bib/blackburn2017avatar.bib
@@ -1,1 +1,10 @@
-b'@article{blackburn2017avatar,\n author = {Blackburn, D and Reuber, M and Christensen, H and Mayer, I and Rutten, C and Venneri, A and Mirheidari, B and others},\n journal = {Journal of the Neurological Sciences},\n pages = {319},\n publisher = {Elsevier},\n title = {An avatar to screen for cognitive impairment},\n volume = {381},\n year = {2017}\n}\n\n'
+@article{blackburn2017avatar,
+ author = {Blackburn, D and Reuber, M and Christensen, H and Mayer, I and Rutten, C and Venneri, A and Mirheidari, B and others},
+ journal = {Journal of the Neurological Sciences},
+ pages = {319},
+ publisher = {Elsevier},
+ title = {An avatar to screen for cognitive impairment},
+ volume = {381},
+ year = {2017}
+}
+
