--- a/_publications/bib/casanueva2014adaptive.bib
+++ b/_publications/bib/casanueva2014adaptive.bib
@@ -1,1 +1,7 @@
-b'@inproceedings{casanueva2014adaptive,\n author = {Casanueva, Inigo and Christensen, Heidi and Hain, Thomas and Green, Phil D},\n booktitle = {Fifteenth Annual Conference of the International Speech Communication Association},\n title = {Adaptive speech recognition and dialogue management for users with speech disorders},\n year = {2014}\n}\n\n'
+@inproceedings{casanueva2014adaptive,
+ author = {Casanueva, Inigo and Christensen, Heidi and Hain, Thomas and Green, Phil D},
+ booktitle = {Fifteenth Annual Conference of the International Speech Communication Association},
+ title = {Adaptive speech recognition and dialogue management for users with speech disorders},
+ year = {2014}
+}
+
