--- a/_publications/bib/cernak2017characterisation.bib
+++ b/_publications/bib/cernak2017characterisation.bib
@@ -1,1 +1,10 @@
-b'@article{cernak2017characterisation,\n author = {Cernak, Milos and Orozco-Arroyave, Juan Rafael and Rudzicz, Frank and Christensen, Heidi and V{\\\'a}squez-Correa, Juan Camilo and N{\\"o}th, Elmar},\n journal = {Computer Speech \\& Language},\n pages = {196--208},\n publisher = {Academic Press},\n title = {Characterisation of voice quality of Parkinson\xe2\x80\x99s disease using differential phonological posterior features},\n volume = {46},\n year = {2017}\n}\n\n'
+@article{cernak2017characterisation,
+ author = {Cernak, Milos and Orozco-Arroyave, Juan Rafael and Rudzicz, Frank and Christensen, Heidi and V{\'a}squez-Correa, Juan Camilo and N{\"o}th, Elmar},
+ journal = {Computer Speech \& Language},
+ pages = {196--208},
+ publisher = {Academic Press},
+ title = {Characterisation of voice quality of Parkinson’s disease using differential phonological posterior features},
+ volume = {46},
+ year = {2017}
+}
+
