--- a/_publications/bib/christensen2000multi.bib
+++ b/_publications/bib/christensen2000multi.bib
@@ -1,1 +1,7 @@
-b'@inproceedings{christensen2000multi,\n author = {Christensen, Heidi and Lindberg, B{\\o}rge and Andersen, Ove},\n booktitle = {Proceedings NORSIG-00 (IEEE Nordic Signal Processing Symposium)},\n title = {Multi-stream speech recognition using heterogeneous minimum classification error feature space transformations},\n year = {2000}\n}\n\n'
+@inproceedings{christensen2000multi,
+ author = {Christensen, Heidi and Lindberg, B{\o}rge and Andersen, Ove},
+ booktitle = {Proceedings NORSIG-00 (IEEE Nordic Signal Processing Symposium)},
+ title = {Multi-stream speech recognition using heterogeneous minimum classification error feature space transformations},
+ year = {2000}
+}
+
