--- a/_publications/bib/christensen2003extractive.bib
+++ b/_publications/bib/christensen2003extractive.bib
@@ -1,1 +1,9 @@
-b'@inproceedings{christensen2003extractive,\n author = {Christensen, Heidi and Gotoh, Yoshihiko and Kolluru, BalaKrishna and Renals, Steve},\n booktitle = {2003 IEEE Workshop on Automatic Speech Recognition and Understanding (IEEE Cat. No. 03EX721)},\n organization = {IEEE},\n pages = {489--494},\n title = {Are extractive text summarisation techniques portable to broadcast news?},\n year = {2003}\n}\n\n'
+@inproceedings{christensen2003extractive,
+ author = {Christensen, Heidi and Gotoh, Yoshihiko and Kolluru, BalaKrishna and Renals, Steve},
+ booktitle = {2003 IEEE Workshop on Automatic Speech Recognition and Understanding (IEEE Cat. No. 03EX721)},
+ organization = {IEEE},
+ pages = {489--494},
+ title = {Are extractive text summarisation techniques portable to broadcast news?},
+ year = {2003}
+}
+
