--- a/_publications/bib/christensen2004text.bib
+++ b/_publications/bib/christensen2004text.bib
@@ -1,1 +1,9 @@
-b'@inproceedings{christensen2004text,\n author = {Christensen, Heidi and Kolluru, BalaKrishna and Gotoh, Yoshihiko and Renals, Steve},\n booktitle = {European Conference on Information Retrieval},\n organization = {Springer, Berlin, Heidelberg},\n pages = {223--237},\n title = {From text summarisation to style-specific summarisation for broadcast news},\n year = {2004}\n}\n\n'
+@inproceedings{christensen2004text,
+ author = {Christensen, Heidi and Kolluru, BalaKrishna and Gotoh, Yoshihiko and Renals, Steve},
+ booktitle = {European Conference on Information Retrieval},
+ organization = {Springer, Berlin, Heidelberg},
+ pages = {223--237},
+ title = {From text summarisation to style-specific summarisation for broadcast news},
+ year = {2004}
+}
+
