--- a/_publications/bib/christensen2007integrating.bib
+++ b/_publications/bib/christensen2007integrating.bib
@@ -1,1 +1,7 @@
-b'@inproceedings{christensen2007integrating,\n author = {Christensen, Heidi and Ma, Ning and Wrigley, Stuart N and Barker, Jon},\n booktitle = {Eighth Annual Conference of the International Speech Communication Association},\n title = {Integrating pitch and localisation cues at a speech fragment level},\n year = {2007}\n}\n\n'
+@inproceedings{christensen2007integrating,
+ author = {Christensen, Heidi and Ma, Ning and Wrigley, Stuart N and Barker, Jon},
+ booktitle = {Eighth Annual Conference of the International Speech Communication Association},
+ title = {Integrating pitch and localisation cues at a speech fragment level},
+ year = {2007}
+}
+
