--- a/_publications/bib/christensen2008improving.bib
+++ b/_publications/bib/christensen2008improving.bib
@@ -1,1 +1,11 @@
-b'@article{christensen2008improving,\n author = {Christensen, Heidi and Ma, Ning and Wrigley, Stuart N and Barker, Jon},\n journal = {The Journal of the Acoustical Society of America},\n number = {5},\n pages = {3294--3294},\n publisher = {Acoustical Society of America},\n title = {Improving source localisation in multi-source, reverberant conditions: exploiting local spectro-temporal location cues},\n volume = {123},\n year = {2008}\n}\n\n'
+@article{christensen2008improving,
+ author = {Christensen, Heidi and Ma, Ning and Wrigley, Stuart N and Barker, Jon},
+ journal = {The Journal of the Acoustical Society of America},
+ number = {5},
+ pages = {3294--3294},
+ publisher = {Acoustical Society of America},
+ title = {Improving source localisation in multi-source, reverberant conditions: exploiting local spectro-temporal location cues},
+ volume = {123},
+ year = {2008}
+}
+
