--- a/_publications/bib/christensen2009popeye.bib
+++ b/_publications/bib/christensen2009popeye.bib
@@ -1,1 +1,7 @@
-b'@inproceedings{christensen2009popeye,\n author = {Christensen, H and Barker, J and Lu, Y-C and J, Xavier and Caseiro, R and Araujo, H},\n booktitle = {Abstract for NCAF Sunderland, UK},\n title = {POPeye: Real-Time, Binaural Sound Source Localisation on an Audio-Visual Robot-Head},\n year = {2009}\n}\n\n'
+@inproceedings{christensen2009popeye,
+ author = {Christensen, H and Barker, J and Lu, Y-C and J, Xavier and Caseiro, R and Araujo, H},
+ booktitle = {Abstract for NCAF Sunderland, UK},
+ title = {POPeye: Real-Time, Binaural Sound Source Localisation on an Audio-Visual Robot-Head},
+ year = {2009}
+}
+
