--- a/_publications/bib/christensen2009simultaneous.bib
+++ b/_publications/bib/christensen2009simultaneous.bib
@@ -1,1 +1,7 @@
-b'@article{christensen2009simultaneous,\n author = {Christensen, H and Barker, J},\n journal = {Abstract for NCAF, Sunderland, UK},\n title = {Simultaneous Tracking of Perceiver Movements and Speaker Changes Using Head-Centered, Binaural Data.},\n year = {2009}\n}\n\n'
+@article{christensen2009simultaneous,
+ author = {Christensen, H and Barker, J},
+ journal = {Abstract for NCAF, Sunderland, UK},
+ title = {Simultaneous Tracking of Perceiver Movements and Speaker Changes Using Head-Centered, Binaural Data.},
+ year = {2009}
+}
+
