--- a/_publications/bib/christensen2009speech.bib
+++ b/_publications/bib/christensen2009speech.bib
@@ -1,1 +1,9 @@
-b'@inproceedings{christensen2009speech,\n author = {Christensen, Heidi and Ma, Ning and Wrigley, Stuart N and Barker, Jon},\n booktitle = {2009 IEEE International Conference on Acoustics, Speech and Signal Processing},\n organization = {IEEE},\n pages = {4593--4596},\n title = {A speech fragment approach to localising multiple speakers in reverberant environments},\n year = {2009}\n}\n\n'
+@inproceedings{christensen2009speech,
+ author = {Christensen, Heidi and Ma, Ning and Wrigley, Stuart N and Barker, Jon},
+ booktitle = {2009 IEEE International Conference on Acoustics, Speech and Signal Processing},
+ organization = {IEEE},
+ pages = {4593--4596},
+ title = {A speech fragment approach to localising multiple speakers in reverberant environments},
+ year = {2009}
+}
+
