--- a/_publications/bib/christensen2010chime.bib
+++ b/_publications/bib/christensen2010chime.bib
@@ -1,1 +1,7 @@
-b'@inproceedings{christensen2010chime,\n author = {Christensen, Heidi and Barker, Jon and Ma, Ning and Green, Phil D},\n booktitle = {Eleventh Annual Conference of the International Speech Communication Association},\n title = {The CHiME corpus: a resource and a challenge for computational hearing in multisource environments},\n year = {2010}\n}\n\n'
+@inproceedings{christensen2010chime,
+ author = {Christensen, Heidi and Barker, Jon and Ma, Ning and Green, Phil D},
+ booktitle = {Eleventh Annual Conference of the International Speech Communication Association},
+ title = {The CHiME corpus: a resource and a challenge for computational hearing in multisource environments},
+ year = {2010}
+}
+
