--- a/_publications/bib/christensen2010speaker.bib
+++ b/_publications/bib/christensen2010speaker.bib
@@ -1,1 +1,9 @@
-b'@inproceedings{christensen2010speaker,\n author = {Christensen, Heidi and Barker, Jon},\n booktitle = {2010 18th European Signal Processing Conference},\n organization = {IEEE},\n pages = {954--958},\n title = {Speaker turn tracking with mobile microphones: combining location and pitch information},\n year = {2010}\n}\n\n'
+@inproceedings{christensen2010speaker,
+ author = {Christensen, Heidi and Barker, Jon},
+ booktitle = {2010 18th European Signal Processing Conference},
+ organization = {IEEE},
+ pages = {954--958},
+ title = {Speaker turn tracking with mobile microphones: combining location and pitch information},
+ year = {2010}
+}
+
