--- a/_publications/bib/christensen2012comparative.bib
+++ b/_publications/bib/christensen2012comparative.bib
@@ -1,1 +1,7 @@
-b'@inproceedings{christensen2012comparative,\n author = {Christensen, Heidi and Cunningham, Stuart and Fox, Charles and Green, Phil and Hain, Thomas},\n booktitle = {Thirteenth Annual Conference of the International Speech Communication Association},\n title = {A comparative study of adaptive, automatic recognition of disordered speech},\n year = {2012}\n}\n\n'
+@inproceedings{christensen2012comparative,
+ author = {Christensen, Heidi and Cunningham, Stuart and Fox, Charles and Green, Phil and Hain, Thomas},
+ booktitle = {Thirteenth Annual Conference of the International Speech Communication Association},
+ title = {A comparative study of adaptive, automatic recognition of disordered speech},
+ year = {2012}
+}
+
