--- a/_publications/bib/christensen2013homeservice.bib
+++ b/_publications/bib/christensen2013homeservice.bib
@@ -1,1 +1,8 @@
-b'@inproceedings{christensen2013homeservice,\n author = {Christensen, Heidi and Casanueva, I{\\~n}igo and Cunningham, Stuart and Green, Phil and Hain, Thomas},\n booktitle = {Proceedings of the Fourth Workshop on Speech and Language Processing for Assistive Technologies},\n pages = {29--34},\n title = {homeService: Voice-enabled assistive technology in the home using cloud-based automatic speech recognition},\n year = {2013}\n}\n\n'
+@inproceedings{christensen2013homeservice,
+ author = {Christensen, Heidi and Casanueva, I{\~n}igo and Cunningham, Stuart and Green, Phil and Hain, Thomas},
+ booktitle = {Proceedings of the Fourth Workshop on Speech and Language Processing for Assistive Technologies},
+ pages = {29--34},
+ title = {homeService: Voice-enabled assistive technology in the home using cloud-based automatic speech recognition},
+ year = {2013}
+}
+
