--- a/_publications/bib/christensen2013learning.bib
+++ b/_publications/bib/christensen2013learning.bib
@@ -1,1 +1,8 @@
-b'@inproceedings{christensen2013learning,\n author = {Christensen, Heidi and Green, Phil D and Hain, Thomas},\n booktitle = {INTERSPEECH},\n pages = {1159--1163},\n title = {Learning speaker-specific pronunciations of disordered speech.},\n year = {2013}\n}\n\n'
+@inproceedings{christensen2013learning,
+ author = {Christensen, Heidi and Green, Phil D and Hain, Thomas},
+ booktitle = {INTERSPEECH},
+ pages = {1159--1163},
+ title = {Learning speaker-specific pronunciations of disordered speech.},
+ year = {2013}
+}
+
