--- a/_publications/bib/christensen2014automatic.bib
+++ b/_publications/bib/christensen2014automatic.bib
@@ -1,1 +1,9 @@
-b'@inproceedings{christensen2014automatic,\n author = {Christensen, Heidi and Casanueva, I and Cunningham, S and Green, P and Hain, Thomas},\n booktitle = {2014 IEEE Spoken Language Technology Workshop (SLT)},\n organization = {IEEE},\n pages = {254--259},\n title = {Automatic selection of speakers for improved acoustic modelling: Recognition of disordered speech with sparse data},\n year = {2014}\n}\n\n'
+@inproceedings{christensen2014automatic,
+ author = {Christensen, Heidi and Casanueva, I and Cunningham, S and Green, P and Hain, Thomas},
+ booktitle = {2014 IEEE Spoken Language Technology Workshop (SLT)},
+ organization = {IEEE},
+ pages = {254--259},
+ title = {Automatic selection of speakers for improved acoustic modelling: Recognition of disordered speech with sparse data},
+ year = {2014}
+}
+
