--- a/_publications/bib/christensen2016slpat.bib
+++ b/_publications/bib/christensen2016slpat.bib
@@ -1,1 +1,7 @@
-b'@inproceedings{christensen2016slpat,\n author = {Christensen, Heidi and Portet, Fran{\\c{c}}ois and Quatieri, Thomas and Rudzicz, Frank and Vertanen, Keith},\n booktitle = {7th Workshop on Speech and Language Processing for Assistive Technologies},\n title = {SLPAT 2016 Workshop on Speech and Language Processing for Assistive Technologies},\n year = {2016}\n}\n\n'
+@inproceedings{christensen2016slpat,
+ author = {Christensen, Heidi and Portet, Fran{\c{c}}ois and Quatieri, Thomas and Rudzicz, Frank and Vertanen, Keith},
+ booktitle = {7th Workshop on Speech and Language Processing for Assistive Technologies},
+ title = {SLPAT 2016 Workshop on Speech and Language Processing for Assistive Technologies},
+ year = {2016}
+}
+
