--- a/_publications/bib/easton2019virtual.bib
+++ b/_publications/bib/easton2019virtual.bib
@@ -1,1 +1,11 @@
-b'@article{easton2019virtual,\n author = {Easton, Katherine and Potter, Stephen and Bec, Remi and Bennion, Matthew and Christensen, Heidi and Grindell, Cheryl and Mirheidari, Bahman and Weich, Scott and de Witte, Luc and Wolstenholme, Daniel and others},\n journal = {Journal of medical Internet research},\n number = {5},\n pages = {e12996},\n publisher = {JMIR Publications Inc., Toronto, Canada},\n title = {A virtual agent to support individuals living with physical and mental comorbidities: co-design and acceptability testing},\n volume = {21},\n year = {2019}\n}\n\n'
+@article{easton2019virtual,
+ author = {Easton, Katherine and Potter, Stephen and Bec, Remi and Bennion, Matthew and Christensen, Heidi and Grindell, Cheryl and Mirheidari, Bahman and Weich, Scott and de Witte, Luc and Wolstenholme, Daniel and others},
+ journal = {Journal of medical Internet research},
+ number = {5},
+ pages = {e12996},
+ publisher = {JMIR Publications Inc., Toronto, Canada},
+ title = {A virtual agent to support individuals living with physical and mental comorbidities: co-design and acceptability testing},
+ volume = {21},
+ year = {2019}
+}
+
