--- a/_publications/bib/fox2012studio.bib
+++ b/_publications/bib/fox2012studio.bib
@@ -1,1 +1,7 @@
-b'@inproceedings{fox2012studio,\n author = {Fox, Charles and Christensen, Heidi and Hain, Thomas},\n booktitle = {Proc. Linux Audio Conference},\n title = {Studio report: Linux audio for multi-speaker natural speech technology},\n year = {2012}\n}\n\n'
+@inproceedings{fox2012studio,
+ author = {Fox, Charles and Christensen, Heidi and Hain, Thomas},
+ booktitle = {Proc. Linux Audio Conference},
+ title = {Studio report: Linux audio for multi-speaker natural speech technology},
+ year = {2012}
+}
+
