--- a/_publications/bib/kolluru2005multi.bib
+++ b/_publications/bib/kolluru2005multi.bib
@@ -1,1 +1,7 @@
-b'@inproceedings{kolluru2005multi,\n author = {Kolluru, Balakrishna and Christensen, Heidi and Gotoh, Yoshihiko},\n booktitle = {Ninth European Conference on Speech Communication and Technology},\n title = {Multi-stage compaction approach to broadcast news summarisation},\n year = {2005}\n}\n\n'
+@inproceedings{kolluru2005multi,
+ author = {Kolluru, Balakrishna and Christensen, Heidi and Gotoh, Yoshihiko},
+ booktitle = {Ninth European Conference on Speech Communication and Technology},
+ title = {Multi-stage compaction approach to broadcast news summarisation},
+ year = {2005}
+}
+
