--- a/_publications/bib/lindberg2000employing.bib
+++ b/_publications/bib/lindberg2000employing.bib
@@ -1,1 +1,7 @@
-b'@inproceedings{lindberg2000employing,\n author = {Lindberg, B{\\o}rge and Andersen, Ove Kjeld and Christensen, Heidi},\n booktitle = {Employing Heterogeneous Information in a Multi-Stream Framework},\n title = {Employing Heterogeneous Information in a Multi-Stream Framework},\n year = {2000}\n}\n\n'
+@inproceedings{lindberg2000employing,
+ author = {Lindberg, B{\o}rge and Andersen, Ove Kjeld and Christensen, Heidi},
+ booktitle = {Employing Heterogeneous Information in a Multi-Stream Framework},
+ title = {Employing Heterogeneous Information in a Multi-Stream Framework},
+ year = {2000}
+}
+
