--- a/_publications/bib/lu2007active.bib
+++ b/_publications/bib/lu2007active.bib
@@ -1,1 +1,7 @@
-b'@inproceedings{lu2007active,\n author = {Lu, Yan-Chen and Cooke, Martin and Christensen, Heidi},\n booktitle = {Eighth Annual Conference of the International Speech Communication Association},\n title = {Active binaural distance estimation for dynamic sources},\n year = {2007}\n}\n\n'
+@inproceedings{lu2007active,
+ author = {Lu, Yan-Chen and Cooke, Martin and Christensen, Heidi},
+ booktitle = {Eighth Annual Conference of the International Speech Communication Association},
+ title = {Active binaural distance estimation for dynamic sources},
+ year = {2007}
+}
+
