--- a/_publications/bib/ma2011binaural.bib
+++ b/_publications/bib/ma2011binaural.bib
@@ -1,1 +1,7 @@
-b'@inproceedings{ma2011binaural,\n author = {Ma, Ning and Barker, Jon and Christensen, Heidi and Green, Phil D},\n booktitle = {Twelfth Annual Conference of the International Speech Communication Association},\n title = {Binaural cues for fragment-based speech recognition in reverberant multisource environments},\n year = {2011}\n}\n\n'
+@inproceedings{ma2011binaural,
+ author = {Ma, Ning and Barker, Jon and Christensen, Heidi and Green, Phil D},
+ booktitle = {Twelfth Annual Conference of the International Speech Communication Association},
+ title = {Binaural cues for fragment-based speech recognition in reverberant multisource environments},
+ year = {2011}
+}
+
