--- a/_publications/bib/ma2011incorporating.bib
+++ b/_publications/bib/ma2011incorporating.bib
@@ -1,1 +1,9 @@
-b'@inproceedings{ma2011incorporating,\n author = {Ma, Ning and Barker, Jon and Christensen, Heidi and Green, Phil},\n booktitle = {2011 Joint Workshop on Hands-free Speech Communication and Microphone Arrays},\n organization = {IEEE},\n pages = {207--212},\n title = {Incorporating localisation cues in a fragment decoding framework for distant binaural speech recognition},\n year = {2011}\n}\n\n'
+@inproceedings{ma2011incorporating,
+ author = {Ma, Ning and Barker, Jon and Christensen, Heidi and Green, Phil},
+ booktitle = {2011 Joint Workshop on Hands-free Speech Communication and Microphone Arrays},
+ organization = {IEEE},
+ pages = {207--212},
+ title = {Incorporating localisation cues in a fragment decoding framework for distant binaural speech recognition},
+ year = {2011}
+}
+
