--- a/_publications/bib/ma2011recent.bib
+++ b/_publications/bib/ma2011recent.bib
@@ -1,1 +1,7 @@
-b'@inproceedings{ma2011recent,\n author = {Ma, Ning and Barker, Jon and Christensen, Heidi and Green, Phil},\n booktitle = {Machine Listening in Multisource Environments},\n title = {Recent advances in fragment-based speech recognition in reverberant multisource environments},\n year = {2011}\n}\n\n'
+@inproceedings{ma2011recent,
+ author = {Ma, Ning and Barker, Jon and Christensen, Heidi and Green, Phil},
+ booktitle = {Machine Listening in Multisource Environments},
+ title = {Recent advances in fragment-based speech recognition in reverberant multisource environments},
+ year = {2011}
+}
+
