--- a/_publications/bib/malavasi2016innovative.bib
+++ b/_publications/bib/malavasi2016innovative.bib
@@ -1,1 +1,9 @@
-b'@inproceedings{malavasi2016innovative,\n author = {Malavasi, Massimiliano and Turri, Enrico and Motolese, Maria Rosaria and Marxer, Ricard and Farwer, Jochen and Christensen, Heidi and Desideri, Lorenzo and Tamburini, Fabio and Green, Phil},\n booktitle = {Italian Forum of Ambient Assisted Living},\n organization = {Springer, Cham},\n pages = {269--278},\n title = {An innovative speech-based interface to control AAL and IoT solutions to help people with speech and motor disability},\n year = {2016}\n}\n\n'
+@inproceedings{malavasi2016innovative,
+ author = {Malavasi, Massimiliano and Turri, Enrico and Motolese, Maria Rosaria and Marxer, Ricard and Farwer, Jochen and Christensen, Heidi and Desideri, Lorenzo and Tamburini, Fabio and Green, Phil},
+ booktitle = {Italian Forum of Ambient Assisted Living},
+ organization = {Springer, Cham},
+ pages = {269--278},
+ title = {An innovative speech-based interface to control AAL and IoT solutions to help people with speech and motor disability},
+ year = {2016}
+}
+
