--- a/_publications/bib/martinez2013dysarthria.bib
+++ b/_publications/bib/martinez2013dysarthria.bib
@@ -1,1 +1,7 @@
-b"@inproceedings{martinez2013dysarthria,\n author = {Mart{\\'\\i}nez, David and Green, Phil and Christensen, Heidi},\n booktitle = {Proceedings of INTERSPEECH},\n title = {Dysarthria intelligibility assessment in a factor analysis total variability space},\n year = {2013}\n}\n\n"
+@inproceedings{martinez2013dysarthria,
+ author = {Mart{\'\i}nez, David and Green, Phil and Christensen, Heidi},
+ booktitle = {Proceedings of INTERSPEECH},
+ title = {Dysarthria intelligibility assessment in a factor analysis total variability space},
+ year = {2013}
+}
+
