--- a/_publications/bib/martinez2015intelligibility.bib
+++ b/_publications/bib/martinez2015intelligibility.bib
@@ -1,1 +1,11 @@
-b"@article{martinez2015intelligibility,\n author = {Mart{\\'\\i}nez, David and Lleida, Eduardo and Green, Phil and Christensen, Heidi and Ortega, Alfonso and Miguel, Antonio},\n journal = {ACM Transactions on Accessible Computing (TACCESS)},\n number = {3},\n pages = {1--21},\n publisher = {ACM New York, NY, USA},\n title = {Intelligibility assessment and speech recognizer word accuracy rate prediction for dysarthric speakers in a factor analysis subspace},\n volume = {6},\n year = {2015}\n}\n\n"
+@article{martinez2015intelligibility,
+ author = {Mart{\'\i}nez, David and Lleida, Eduardo and Green, Phil and Christensen, Heidi and Ortega, Alfonso and Miguel, Antonio},
+ journal = {ACM Transactions on Accessible Computing (TACCESS)},
+ number = {3},
+ pages = {1--21},
+ publisher = {ACM New York, NY, USA},
+ title = {Intelligibility assessment and speech recognizer word accuracy rate prediction for dysarthric speakers in a factor analysis subspace},
+ volume = {6},
+ year = {2015}
+}
+
