--- a/_publications/bib/mirheidari2018detecting.bib
+++ b/_publications/bib/mirheidari2018detecting.bib
@@ -1,1 +1,8 @@
-b'@inproceedings{mirheidari2018detecting,\n author = {Mirheidari, Bahman and Blackburn, Daniel and Walker, Traci and Venneri, Annalena and Reuber, Markus and Christensen, Heidi},\n booktitle = {INTERSPEECH},\n pages = {1893--1897},\n title = {Detecting Signs of Dementia Using Word Vector Representations.},\n year = {2018}\n}\n\n'
+@inproceedings{mirheidari2018detecting,
+ author = {Mirheidari, Bahman and Blackburn, Daniel and Walker, Traci and Venneri, Annalena and Reuber, Markus and Christensen, Heidi},
+ booktitle = {INTERSPEECH},
+ pages = {1893--1897},
+ title = {Detecting Signs of Dementia Using Word Vector Representations.},
+ year = {2018}
+}
+
