--- a/_publications/bib/mirheidari2019computational.bib
+++ b/_publications/bib/mirheidari2019computational.bib
@@ -1,1 +1,9 @@
-b'@inproceedings{mirheidari2019computational,\n author = {Mirheidari, Bahman and Blackburn, Daniel and O\xe2\x80\x99Malley, Ronan and Walker, Traci and Venneri, Annalena and Reuber, Markus and Christensen, Heidi},\n booktitle = {ICASSP 2019-2019 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},\n organization = {IEEE},\n pages = {2732--2736},\n title = {Computational cognitive assessment: Investigating the use of an intelligent virtual agent for the detection of early signs of dementia},\n year = {2019}\n}\n\n'
+@inproceedings{mirheidari2019computational,
+ author = {Mirheidari, Bahman and Blackburn, Daniel and O’Malley, Ronan and Walker, Traci and Venneri, Annalena and Reuber, Markus and Christensen, Heidi},
+ booktitle = {ICASSP 2019-2019 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
+ organization = {IEEE},
+ pages = {2732--2736},
+ title = {Computational cognitive assessment: Investigating the use of an intelligent virtual agent for the detection of early signs of dementia},
+ year = {2019}
+}
+
