--- a/_publications/bib/mirheidari2019dementia.bib
+++ b/_publications/bib/mirheidari2019dementia.bib
@@ -1,1 +1,10 @@
-b'@article{mirheidari2019dementia,\n author = {Mirheidari, Bahman and Blackburn, Daniel and Walker, Traci and Reuber, Markus and Christensen, Heidi},\n journal = {Computer Speech \\& Language},\n pages = {65--79},\n publisher = {Academic Press},\n title = {Dementia detection using automatic analysis of conversations},\n volume = {53},\n year = {2019}\n}\n\n'
+@article{mirheidari2019dementia,
+ author = {Mirheidari, Bahman and Blackburn, Daniel and Walker, Traci and Reuber, Markus and Christensen, Heidi},
+ journal = {Computer Speech \& Language},
+ pages = {65--79},
+ publisher = {Academic Press},
+ title = {Dementia detection using automatic analysis of conversations},
+ volume = {53},
+ year = {2019}
+}
+
