--- a/_publications/bib/mirheidari2019detecting.bib
+++ b/_publications/bib/mirheidari2019detecting.bib
@@ -1,1 +1,7 @@
-b"@article{mirheidari2019detecting,\n author = {Mirheidari, Bahman and Pan, Yilin and Walker, Traci and Reuber, Markus and Venneri, Annalena and Blackburn, Daniel and Christensen, Heidi},\n journal = {arXiv preprint arXiv:1910.00515},\n title = {Detecting Alzheimer's Disease by estimating attention and elicitation path through the alignment of spoken picture descriptions with the picture prompt},\n year = {2019}\n}\n\n"
+@article{mirheidari2019detecting,
+ author = {Mirheidari, Bahman and Pan, Yilin and Walker, Traci and Reuber, Markus and Venneri, Annalena and Blackburn, Daniel and Christensen, Heidi},
+ journal = {arXiv preprint arXiv:1910.00515},
+ title = {Detecting Alzheimer's Disease by estimating attention and elicitation path through the alignment of spoken picture descriptions with the picture prompt},
+ year = {2019}
+}
+
