--- a/_publications/bib/mirheidari2020data.bib
+++ b/_publications/bib/mirheidari2020data.bib
@@ -1,1 +1,7 @@
-b"@article{mirheidari2020data,\n author = {Mirheidari, Bahman and Pan, Yilin and Blackburn, Daniel and O'Malley, Ronan and Walker, Traci and Venneri, Annalena and Reuber, Markus and Christensen, Heidi},\n journal = {arXiv preprint arXiv:2004.05989},\n title = {Data augmentation using generative networks to identify dementia},\n year = {2020}\n}\n\n"
+@article{mirheidari2020data,
+ author = {Mirheidari, Bahman and Pan, Yilin and Blackburn, Daniel and O'Malley, Ronan and Walker, Traci and Venneri, Annalena and Reuber, Markus and Christensen, Heidi},
+ journal = {arXiv preprint arXiv:2004.05989},
+ title = {Data augmentation using generative networks to identify dementia},
+ year = {2020}
+}
+
