--- a/_publications/bib/nicolao2016framework.bib
+++ b/_publications/bib/nicolao2016framework.bib
@@ -1,1 +1,8 @@
-b'@inproceedings{nicolao2016framework,\n author = {Nicolao, Mauro and Christensen, Heidi and Cunningham, Stuart and Green, Phil and Hain, Thomas},\n booktitle = {Proceedings of LREC 2016},\n organization = {European Language Resources Association},\n title = {A framework for collecting realistic recordings of dysarthric speech-the homeservice corpus},\n year = {2016}\n}\n\n'
+@inproceedings{nicolao2016framework,
+ author = {Nicolao, Mauro and Christensen, Heidi and Cunningham, Stuart and Green, Phil and Hain, Thomas},
+ booktitle = {Proceedings of LREC 2016},
+ organization = {European Language Resources Association},
+ title = {A framework for collecting realistic recordings of dysarthric speech-the homeservice corpus},
+ year = {2016}
+}
+
