--- a/_publications/bib/o2019055.bib
+++ b/_publications/bib/o2019055.bib
@@ -1,1 +1,11 @@
-b'@article{o2019055,\n author = {O\xe2\x80\x99Malley, Ronan and Mirhedari, Bahman and Harkness, Kirsty and Reuber, Markus and Venneri, Annalena and Christensen, Heidi and Blackburn, Daniel},\n journal = {Journal of Neurology, Neurosurgery and Psychiatry},\n number = {12},\n pages = {A23},\n publisher = {BMJ Publishing Group Ltd},\n title = {055 The digital doctor: a fully automated stratification and monitoring system for patients with memory complaints},\n volume = {90},\n year = {2019}\n}\n\n'
+@article{o2019055,
+ author = {O’Malley, Ronan and Mirhedari, Bahman and Harkness, Kirsty and Reuber, Markus and Venneri, Annalena and Christensen, Heidi and Blackburn, Daniel},
+ journal = {Journal of Neurology, Neurosurgery and Psychiatry},
+ number = {12},
+ pages = {A23},
+ publisher = {BMJ Publishing Group Ltd},
+ title = {055 The digital doctor: a fully automated stratification and monitoring system for patients with memory complaints},
+ volume = {90},
+ year = {2019}
+}
+
