--- a/_publications/bib/o2019056.bib
+++ b/_publications/bib/o2019056.bib
@@ -1,1 +1,11 @@
-b'@article{o2019056,\n author = {O\xe2\x80\x99Malley, Ronan and Brook, Eric and Lewis, Alice and Sonksen, Isobel and Mirhedari, Bahman and Venneri, Annalena and Christensen, Heidi and Blackburn, Daniel},\n journal = {Journal of Neurology, Neurosurgery and Psychiatry},\n number = {12},\n pages = {A23},\n publisher = {BMJ Publishing Group Ltd},\n title = {056 Exploring the feasibility of automating verbal fluency tasks for cognitive assessment: data collection and analysis},\n volume = {90},\n year = {2019}\n}\n\n'
+@article{o2019056,
+ author = {O’Malley, Ronan and Brook, Eric and Lewis, Alice and Sonksen, Isobel and Mirhedari, Bahman and Venneri, Annalena and Christensen, Heidi and Blackburn, Daniel},
+ journal = {Journal of Neurology, Neurosurgery and Psychiatry},
+ number = {12},
+ pages = {A23},
+ publisher = {BMJ Publishing Group Ltd},
+ title = {056 Exploring the feasibility of automating verbal fluency tasks for cognitive assessment: data collection and analysis},
+ volume = {90},
+ year = {2019}
+}
+
