--- a/_publications/bib/orozco2018neurospeech.bib
+++ b/_publications/bib/orozco2018neurospeech.bib
@@ -1,1 +1,10 @@
-b"@article{orozco2018neurospeech,\n author = {Orozco-Arroyave, Juan Rafael and V{\\'a}squez-Correa, Juan Camilo and Vargas-Bonilla, Jes{\\'u}s Francisco and Arora, R and Dehak, N and Nidadavolu, PS and Christensen, H and Rudzicz, F and Yancheva, M and Chinaei, H and others},\n journal = {SoftwareX},\n pages = {69--70},\n publisher = {Elsevier},\n title = {NeuroSpeech},\n volume = {8},\n year = {2018}\n}\n\n"
+@article{orozco2018neurospeech,
+ author = {Orozco-Arroyave, Juan Rafael and V{\'a}squez-Correa, Juan Camilo and Vargas-Bonilla, Jes{\'u}s Francisco and Arora, R and Dehak, N and Nidadavolu, PS and Christensen, H and Rudzicz, F and Yancheva, M and Chinaei, H and others},
+ journal = {SoftwareX},
+ pages = {69--70},
+ publisher = {Elsevier},
+ title = {NeuroSpeech},
+ volume = {8},
+ year = {2018}
+}
+
