--- a/_publications/bib/rafael2018neurospeech.bib
+++ b/_publications/bib/rafael2018neurospeech.bib
@@ -1,1 +1,10 @@
-b'@article{rafael2018neurospeech,\n author = {Rafael Orozco-Arroyave, Juan and Camilo Vasquez-Correa, Juan and Francisco Vargas-Bonilla, Jesus and Arora, R and Dehak, N and Nidadavolu, PS and Christensen, H and Rudzicz, F and Yancheva, M and Chinaei, H and others},\n journal = {SOFTWAREX},\n pages = {69--70},\n publisher = {ELSEVIER SCIENCE BV PO BOX 211, 1000 AE AMSTERDAM, NETHERLANDS},\n title = {NeuroSpeech},\n volume = {8},\n year = {2018}\n}\n\n'
+@article{rafael2018neurospeech,
+ author = {Rafael Orozco-Arroyave, Juan and Camilo Vasquez-Correa, Juan and Francisco Vargas-Bonilla, Jesus and Arora, R and Dehak, N and Nidadavolu, PS and Christensen, H and Rudzicz, F and Yancheva, M and Chinaei, H and others},
+ journal = {SOFTWAREX},
+ pages = {69--70},
+ publisher = {ELSEVIER SCIENCE BV PO BOX 211, 1000 AE AMSTERDAM, NETHERLANDS},
+ title = {NeuroSpeech},
+ volume = {8},
+ year = {2018}
+}
+
