--- a/_publications/bib/walker2020characterising.bib
+++ b/_publications/bib/walker2020characterising.bib
@@ -1,1 +1,9 @@
-b'@article{walker2020characterising,\n author = {Walker, Gareth and Morris, Lee-Anne and Christensen, Heidi and Mirheidari, Bahman and Reuber, Markus and Blackburn, Daniel J},\n journal = {Clinical linguistics \\& phonetics},\n pages = {1--16},\n publisher = {Taylor \\& Francis},\n title = {Characterising spoken responses to an intelligent virtual agent by persons with mild cognitive impairment},\n year = {2020}\n}\n\n'
+@article{walker2020characterising,
+ author = {Walker, Gareth and Morris, Lee-Anne and Christensen, Heidi and Mirheidari, Bahman and Reuber, Markus and Blackburn, Daniel J},
+ journal = {Clinical linguistics \& phonetics},
+ pages = {1--16},
+ publisher = {Taylor \& Francis},
+ title = {Characterising spoken responses to an intelligent virtual agent by persons with mild cognitive impairment},
+ year = {2020}
+}
+
