--- a/_publications/bib/xiong2018channel.bib
+++ b/_publications/bib/xiong2018channel.bib
@@ -1,1 +1,8 @@
-b'@inproceedings{xiong2018channel,\n author = {Xiong, Feifei and Zhang, Jisi and Meyer, Bernd T and Christensen, Heidi and Barker, Jon},\n booktitle = {CHiME-5},\n pages = {19--24},\n title = {Channel selection using neural network posterior probability for speech recognition with distributed microphone arrays in everyday environments},\n year = {2018}\n}\n\n'
+@inproceedings{xiong2018channel,
+ author = {Xiong, Feifei and Zhang, Jisi and Meyer, Bernd T and Christensen, Heidi and Barker, Jon},
+ booktitle = {CHiME-5},
+ pages = {19--24},
+ title = {Channel selection using neural network posterior probability for speech recognition with distributed microphone arrays in everyday environments},
+ year = {2018}
+}
+
