--- a/_publications/bib/yue2020autoencoder.bib
+++ b/_publications/bib/yue2020autoencoder.bib
@@ -1,1 +1,8 @@
-b'@inproceedings{yue2020autoencoder,\n author = {Yue, Z and Christensen, H and Barker, J},\n booktitle = {Proceedings of the Annual Conference of the International Speech Communication Association, INTERSPEECH 2020},\n organization = {International Speech Communication Association (ISCA)},\n title = {Autoencoder bottleneck features with multi-task optimisation for improved continuous dysarthric speech recognition},\n year = {2020}\n}\n\n'
+@inproceedings{yue2020autoencoder,
+ author = {Yue, Z and Christensen, H and Barker, J},
+ booktitle = {Proceedings of the Annual Conference of the International Speech Communication Association, INTERSPEECH 2020},
+ organization = {International Speech Communication Association (ISCA)},
+ title = {Autoencoder bottleneck features with multi-task optimisation for improved continuous dysarthric speech recognition},
+ year = {2020}
+}
+
