--- a/_publications/bib/yue2020exploring.bib
+++ b/_publications/bib/yue2020exploring.bib
@@ -1,1 +1,9 @@
-b'@inproceedings{yue2020exploring,\n author = {Yue, Zhengjun and Xiong, Feifei and Christensen, Heidi and Barker, Jon},\n booktitle = {ICASSP 2020-2020 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},\n organization = {IEEE},\n pages = {6094--6098},\n title = {Exploring Appropriate Acoustic and Language Modelling Choices for Continuous Dysarthric Speech Recognition},\n year = {2020}\n}\n\n'
+@inproceedings{yue2020exploring,
+ author = {Yue, Zhengjun and Xiong, Feifei and Christensen, Heidi and Barker, Jon},
+ booktitle = {ICASSP 2020-2020 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
+ organization = {IEEE},
+ pages = {6094--6098},
+ title = {Exploring Appropriate Acoustic and Language Modelling Choices for Continuous Dysarthric Speech Recognition},
+ year = {2020}
+}
+
