--- a/_publications/bib/al2019new.bib
+++ b/_publications/bib/al2019new.bib
@@ -1,1 +1,11 @@
-b'@article{al2019new,\n author = {Al-Hameed, Sabah and Benaissa, Mohammed and Christensen, Heidi and Mirheidari, Bahman and Blackburn, Daniel and Reuber, Markus},\n journal = {PloS one},\n number = {5},\n pages = {e0217388},\n publisher = {Public Library of Science San Francisco, CA USA},\n title = {A new diagnostic approach for the identification of patients with neurodegenerative cognitive complaints},\n volume = {14},\n year = {2019}\n}\n\n'
+@article{al2019new,
+ author = {Al-Hameed, Sabah and Benaissa, Mohammed and Christensen, Heidi and Mirheidari, Bahman and Blackburn, Daniel and Reuber, Markus},
+ journal = {PloS one},
+ number = {5},
+ pages = {e0217388},
+ publisher = {Public Library of Science San Francisco, CA USA},
+ title = {A new diagnostic approach for the identification of patients with neurodegenerative cognitive complaints},
+ volume = {14},
+ year = {2019}
+}
+
