--- a/_publications/bib/alexandersson2015proceedings.bib
+++ b/_publications/bib/alexandersson2015proceedings.bib
@@ -1,1 +1,7 @@
-b'@inproceedings{alexandersson2015proceedings,\n author = {Alexandersson, Jan and Altinsoy, Ercan and Christensen, Heidi and Ljungl{\\"o}f, Peter and Portet, Fran{\\c{c}}ois and Rudzicz, Frank},\n booktitle = {Proceedings of SLPAT 2015: 6th Workshop on Speech and Language Processing for Assistive Technologies},\n title = {Proceedings of SLPAT 2015: 6th Workshop on Speech and Language Processing for Assistive Technologies},\n year = {2015}\n}\n\n'
+@inproceedings{alexandersson2015proceedings,
+ author = {Alexandersson, Jan and Altinsoy, Ercan and Christensen, Heidi and Ljungl{\"o}f, Peter and Portet, Fran{\c{c}}ois and Rudzicz, Frank},
+ booktitle = {Proceedings of SLPAT 2015: 6th Workshop on Speech and Language Processing for Assistive Technologies},
+ title = {Proceedings of SLPAT 2015: 6th Workshop on Speech and Language Processing for Assistive Technologies},
+ year = {2015}
+}
+
