--- a/_publications/bib/alsaleh2018discriminating.bib
+++ b/_publications/bib/alsaleh2018discriminating.bib
@@ -1,1 +1,9 @@
-b'@inproceedings{alsaleh2018discriminating,\n author = {AlSaleh, Mashael and Moore, Roger and Christensen, Heidi and Arvaneh, Mahnaz},\n booktitle = {2018 40th Annual International Conference of the IEEE Engineering in Medicine and Biology Society (EMBC)},\n organization = {IEEE},\n pages = {1952--1955},\n title = {Discriminating between imagined speech and non-speech tasks using eeg},\n year = {2018}\n}\n\n'
+@inproceedings{alsaleh2018discriminating,
+ author = {AlSaleh, Mashael and Moore, Roger and Christensen, Heidi and Arvaneh, Mahnaz},
+ booktitle = {2018 40th Annual International Conference of the IEEE Engineering in Medicine and Biology Society (EMBC)},
+ organization = {IEEE},
+ pages = {1952--1955},
+ title = {Discriminating between imagined speech and non-speech tasks using eeg},
+ year = {2018}
+}
+
