--- a/_publications/bib/barker2011overview.bib
+++ b/_publications/bib/barker2011overview.bib
@@ -1,1 +1,7 @@
-b'@inproceedings{barker2011overview,\n author = {Barker, Jon and Vincent, Emmanuel and Ma, Ning and Christensen, Heidi and Green, Phil},\n booktitle = {Proc. Machine Listening in Multisource Environments (CHiME 2011), satellite workshop of INTERSPEECH 2011},\n title = {Overview of the PASCAL CHiME Speech Separation and Recognition Challenge},\n year = {2011}\n}\n\n'
+@inproceedings{barker2011overview,
+ author = {Barker, Jon and Vincent, Emmanuel and Ma, Ning and Christensen, Heidi and Green, Phil},
+ booktitle = {Proc. Machine Listening in Multisource Environments (CHiME 2011), satellite workshop of INTERSPEECH 2011},
+ title = {Overview of the PASCAL CHiME Speech Separation and Recognition Challenge},
+ year = {2011}
+}
+
