--- a/_publications/bib/barker2013pascal.bib
+++ b/_publications/bib/barker2013pascal.bib
@@ -1,1 +1,11 @@
-b'@article{barker2013pascal,\n author = {Barker, Jon and Vincent, Emmanuel and Ma, Ning and Christensen, Heidi and Green, Phil},\n journal = {Computer Speech \\& Language},\n number = {3},\n pages = {621--633},\n publisher = {Academic Press},\n title = {The PASCAL CHiME speech separation and recognition challenge},\n volume = {27},\n year = {2013}\n}\n\n'
+@article{barker2013pascal,
+ author = {Barker, Jon and Vincent, Emmanuel and Ma, Ning and Christensen, Heidi and Green, Phil},
+ journal = {Computer Speech \& Language},
+ number = {3},
+ pages = {621--633},
+ publisher = {Academic Press},
+ title = {The PASCAL CHiME speech separation and recognition challenge},
+ volume = {27},
+ year = {2013}
+}
+
