--- a/_publications/bib/cernak2017impact.bib
+++ b/_publications/bib/cernak2017impact.bib
@@ -1,1 +1,9 @@
-b'@inproceedings{cernak2017impact,\n author = {Cernak, Milos and N{\\"o}th, Elmar and Rudzicz, Frank and Christensen, Heidi and Orozco-Arroyave, Juan Rafael and Arora, Raman and Bocklet, Tobias and Chinaei, Hamidreza and Hannink, Julius and Nidadavolu, Phani Sankar and others},\n booktitle = {2017 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},\n organization = {IEEE},\n pages = {5090--5094},\n title = {On the impact of non-modal phonation on phonological features},\n year = {2017}\n}\n\n'
+@inproceedings{cernak2017impact,
+ author = {Cernak, Milos and N{\"o}th, Elmar and Rudzicz, Frank and Christensen, Heidi and Orozco-Arroyave, Juan Rafael and Arora, Raman and Bocklet, Tobias and Chinaei, Hamidreza and Hannink, Julius and Nidadavolu, Phani Sankar and others},
+ booktitle = {2017 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
+ organization = {IEEE},
+ pages = {5090--5094},
+ title = {On the impact of non-modal phonation on phonological features},
+ year = {2017}
+}
+
