--- a/_publications/bib/christensen2000employing.bib
+++ b/_publications/bib/christensen2000employing.bib
@@ -1,1 +1,10 @@
-b'@inproceedings{christensen2000employing,\n author = {Christensen, Heidi and Lindberg, Borge and Andersen, Ove},\n booktitle = {2000 IEEE International Conference on Acoustics, Speech, and Signal Processing. Proceedings (Cat. No. 00CH37100)},\n organization = {IEEE},\n pages = {1571--1574},\n title = {Employing heterogeneous information in a multi-stream framework},\n volume = {3},\n year = {2000}\n}\n\n'
+@inproceedings{christensen2000employing,
+ author = {Christensen, Heidi and Lindberg, Borge and Andersen, Ove},
+ booktitle = {2000 IEEE International Conference on Acoustics, Speech, and Signal Processing. Proceedings (Cat. No. 00CH37100)},
+ organization = {IEEE},
+ pages = {1571--1574},
+ title = {Employing heterogeneous information in a multi-stream framework},
+ volume = {3},
+ year = {2000}
+}
+
