--- a/_publications/bib/christensen2000noise.bib
+++ b/_publications/bib/christensen2000noise.bib
@@ -1,1 +1,7 @@
-b'@inproceedings{christensen2000noise,\n author = {Christensen, Heidi and Lindberg, Borge and Andersen, Ove},\n booktitle = {Sixth International Conference on Spoken Language Processing},\n title = {Noise robustness of heterogeneous features employing minimum classification error feature space transformations},\n year = {2000}\n}\n\n'
+@inproceedings{christensen2000noise,
+ author = {Christensen, Heidi and Lindberg, Borge and Andersen, Ove},
+ booktitle = {Sixth International Conference on Spoken Language Processing},
+ title = {Noise robustness of heterogeneous features employing minimum classification error feature space transformations},
+ year = {2000}
+}
+
