--- a/_publications/bib/christensen2001introducing.bib
+++ b/_publications/bib/christensen2001introducing.bib
@@ -1,1 +1,8 @@
-b'@inproceedings{christensen2001introducing,\n author = {Christensen, Heidi and Lindberg, B{\\o}rge and Andersen, Ove},\n booktitle = {INTERSPEECH},\n pages = {2289--2292},\n title = {Introducing phonetically motivated information into ASR.},\n year = {2001}\n}\n\n'
+@inproceedings{christensen2001introducing,
+ author = {Christensen, Heidi and Lindberg, B{\o}rge and Andersen, Ove},
+ booktitle = {INTERSPEECH},
+ pages = {2289--2292},
+ title = {Introducing phonetically motivated information into ASR.},
+ year = {2001}
+}
+
