--- a/_publications/bib/christensen2005maximum.bib
+++ b/_publications/bib/christensen2005maximum.bib
@@ -1,1 +1,10 @@
-b"@inproceedings{christensen2005maximum,\n author = {Christensen, Heidi and Kolluru, BalaKrishna and Gotoh, Yoshihiko and Renals, Steve},\n booktitle = {Proceedings.(ICASSP'05). IEEE International Conference on Acoustics, Speech, and Signal Processing, 2005.},\n organization = {IEEE},\n pages = {I--1029},\n title = {Maximum entropy segmentation of broadcast news},\n volume = {1},\n year = {2005}\n}\n\n"
+@inproceedings{christensen2005maximum,
+ author = {Christensen, Heidi and Kolluru, BalaKrishna and Gotoh, Yoshihiko and Renals, Steve},
+ booktitle = {Proceedings.(ICASSP'05). IEEE International Conference on Acoustics, Speech, and Signal Processing, 2005.},
+ organization = {IEEE},
+ pages = {I--1029},
+ title = {Maximum entropy segmentation of broadcast news},
+ volume = {1},
+ year = {2005}
+}
+
