--- a/_publications/bib/christensen2009using.bib
+++ b/_publications/bib/christensen2009using.bib
@@ -1,1 +1,7 @@
-b'@inproceedings{christensen2009using,\n author = {Christensen, Heidi and Barker, Jon},\n booktitle = {Tenth Annual Conference of the International Speech Communication Association},\n title = {Using location cues to track speaker changes from mobile, binaural microphones},\n year = {2009}\n}\n\n'
+@inproceedings{christensen2009using,
+ author = {Christensen, Heidi and Barker, Jon},
+ booktitle = {Tenth Annual Conference of the International Speech Communication Association},
+ title = {Using location cues to track speaker changes from mobile, binaural microphones},
+ year = {2009}
+}
+
