--- a/_publications/bib/christensen2012specs.bib
+++ b/_publications/bib/christensen2012specs.bib
@@ -1,1 +1,7 @@
-b'@inproceedings{christensen2012specs,\n author = {Christensen, Heidi and Siddharth, S and O\xe2\x80\x99Neill, Peter and Clarke, Zo{\\"e} and Judge, Simon and Cunningham, Stuart and Hawley, M},\n booktitle = {In proc. Workshop on Innovation and Applications in Speech Technology},\n title = {SPECS-an embedded platform, speech-driven environmental control system evaluated in a virtuous circle framework},\n year = {2012}\n}\n\n'
+@inproceedings{christensen2012specs,
+ author = {Christensen, Heidi and Siddharth, S and O’Neill, Peter and Clarke, Zo{\"e} and Judge, Simon and Cunningham, Stuart and Hawley, M},
+ booktitle = {In proc. Workshop on Innovation and Applications in Speech Technology},
+ title = {SPECS-an embedded platform, speech-driven environmental control system evaluated in a virtuous circle framework},
+ year = {2012}
+}
+
