--- a/_publications/bib/christensenyz2001introducing.bib
+++ b/_publications/bib/christensenyz2001introducing.bib
@@ -1,1 +1,7 @@
-b'@inproceedings{christensenyz2001introducing,\n author = {Christensenyz, Heidi and Lindbergy, B{\\o}rge and Anderseny, Ove},\n booktitle = {Seventh European Conference on Speech Communication and Technology},\n title = {Introducing phonetically motivated information into ASR},\n year = {2001}\n}\n\n'
+@inproceedings{christensenyz2001introducing,
+ author = {Christensenyz, Heidi and Lindbergy, B{\o}rge and Anderseny, Ove},
+ booktitle = {Seventh European Conference on Speech Communication and Technology},
+ title = {Introducing phonetically motivated information into ASR},
+ year = {2001}
+}
+
