--- a/_publications/bib/green2016cloudcast.bib
+++ b/_publications/bib/green2016cloudcast.bib
@@ -1,1 +1,8 @@
-b"@inproceedings{green2016cloudcast,\n author = {Green, Phil D and Marxer, Ricard and Cunningham, Stuart P and Christensen, Heidi and Rudzicz, Frank and Yancheva, Maria and Coy, Andr{\\'e} and Malavasi, Massimiliano and Desideri, Lorenzo and Tamburini, Fabio},\n booktitle = {INTERSPEECH},\n pages = {1608--1612},\n title = {CloudCAST-Remote Speech Technology for Speech Professionals.},\n year = {2016}\n}\n\n"
+@inproceedings{green2016cloudcast,
+ author = {Green, Phil D and Marxer, Ricard and Cunningham, Stuart P and Christensen, Heidi and Rudzicz, Frank and Yancheva, Maria and Coy, Andr{\'e} and Malavasi, Massimiliano and Desideri, Lorenzo and Tamburini, Fabio},
+ booktitle = {INTERSPEECH},
+ pages = {1608--1612},
+ title = {CloudCAST-Remote Speech Technology for Speech Professionals.},
+ year = {2016}
+}
+
