--- a/_publications/bib/kolluru2003exploring.bib
+++ b/_publications/bib/kolluru2003exploring.bib
@@ -1,1 +1,9 @@
-b'@inproceedings{kolluru2003exploring,\n author = {Kolluru, BalaKrishna and Christensen, Heidi and Gotoh, Yoshihiko and Renals, Steve},\n booktitle = {2003 IEEE Workshop on Automatic Speech Recognition and Understanding (IEEE Cat. No. 03EX721)},\n organization = {IEEE},\n pages = {495--500},\n title = {Exploring the style-technique interaction in extractive summarization of broadcast news},\n year = {2003}\n}\n\n'
+@inproceedings{kolluru2003exploring,
+ author = {Kolluru, BalaKrishna and Christensen, Heidi and Gotoh, Yoshihiko and Renals, Steve},
+ booktitle = {2003 IEEE Workshop on Automatic Speech Recognition and Understanding (IEEE Cat. No. 03EX721)},
+ organization = {IEEE},
+ pages = {495--500},
+ title = {Exploring the style-technique interaction in extractive summarization of broadcast news},
+ year = {2003}
+}
+
