--- a/_publications/bib/kolluru2004decremental.bib
+++ b/_publications/bib/kolluru2004decremental.bib
@@ -1,1 +1,7 @@
-b'@inproceedings{kolluru2004decremental,\n author = {Kolluru, BalaKrishna and Christensen, Heidi and Gotoh, Yoshihiko},\n booktitle = {the Proceedings of the HLT/NAACL workshop on Automatic Summarization/Document Understanding Conference (DUC 2004)},\n title = {Decremental Feature-based Compaction},\n year = {2004}\n}\n\n'
+@inproceedings{kolluru2004decremental,
+ author = {Kolluru, BalaKrishna and Christensen, Heidi and Gotoh, Yoshihiko},
+ booktitle = {the Proceedings of the HLT/NAACL workshop on Automatic Summarization/Document Understanding Conference (DUC 2004)},
+ title = {Decremental Feature-based Compaction},
+ year = {2004}
+}
+
