--- a/_publications/bib/ma2010distant.bib
+++ b/_publications/bib/ma2010distant.bib
@@ -1,1 +1,7 @@
-b'@inproceedings{ma2010distant,\n author = {Ma, Ning and Barker, Jon and Christensen, Heidi and Green, Phil},\n booktitle = {Statistical And Perceptual Audition 2010},\n title = {Distant microphone speech recognition in a noisy indoor environment: combining soft missing data and speech fragment decoding},\n year = {2010}\n}\n\n'
+@inproceedings{ma2010distant,
+ author = {Ma, Ning and Barker, Jon and Christensen, Heidi and Green, Phil},
+ booktitle = {Statistical And Perceptual Audition 2010},
+ title = {Distant microphone speech recognition in a noisy indoor environment: combining soft missing data and speech fragment decoding},
+ year = {2010}
+}
+
