--- a/_publications/bib/ma2013hearing.bib
+++ b/_publications/bib/ma2013hearing.bib
@@ -1,1 +1,11 @@
-b'@article{ma2013hearing,\n author = {Ma, Ning and Barker, Jon and Christensen, Heidi and Green, Phil},\n journal = {Computer Speech \\& Language},\n number = {3},\n pages = {820--836},\n publisher = {Academic Press},\n title = {A hearing-inspired approach for distant-microphone speech recognition in the presence of multiple sources},\n volume = {27},\n year = {2013}\n}\n\n'
+@article{ma2013hearing,
+ author = {Ma, Ning and Barker, Jon and Christensen, Heidi and Green, Phil},
+ journal = {Computer Speech \& Language},
+ number = {3},
+ pages = {820--836},
+ publisher = {Academic Press},
+ title = {A hearing-inspired approach for distant-microphone speech recognition in the presence of multiple sources},
+ volume = {27},
+ year = {2013}
+}
+
