--- a/_publications/bib/mirheidari2016diagnosing.bib
+++ b/_publications/bib/mirheidari2016diagnosing.bib
@@ -1,1 +1,9 @@
-b'@inproceedings{mirheidari2016diagnosing,\n author = {Mirheidari, Bahman and Blackburn, Daniel and Reuber, Markus and Walker, Traci and Christensen, Heidi},\n booktitle = {Proceedings of interspeech},\n organization = {ISCA},\n pages = {1220--1224},\n title = {Diagnosing people with dementia using automatic conversation analysis},\n year = {2016}\n}\n\n'
+@inproceedings{mirheidari2016diagnosing,
+ author = {Mirheidari, Bahman and Blackburn, Daniel and Reuber, Markus and Walker, Traci and Christensen, Heidi},
+ booktitle = {Proceedings of interspeech},
+ organization = {ISCA},
+ pages = {1220--1224},
+ title = {Diagnosing people with dementia using automatic conversation analysis},
+ year = {2016}
+}
+
