--- a/_publications/bib/mirheidari2017avatar.bib
+++ b/_publications/bib/mirheidari2017avatar.bib
@@ -1,1 +1,9 @@
-b'@inproceedings{mirheidari2017avatar,\n author = {Mirheidari, Bahman and Blackburn, DJ and Harkness, Kirsty and Walker, Traci and Venneri, Annalena and Reuber, Markus and Christensen, Heidi},\n booktitle = {Interspeech 2017},\n organization = {ISCA},\n pages = {3147--3151},\n title = {An avatar-based system for identifying individuals likely to develop dementia},\n year = {2017}\n}\n\n'
+@inproceedings{mirheidari2017avatar,
+ author = {Mirheidari, Bahman and Blackburn, DJ and Harkness, Kirsty and Walker, Traci and Venneri, Annalena and Reuber, Markus and Christensen, Heidi},
+ booktitle = {Interspeech 2017},
+ organization = {ISCA},
+ pages = {3147--3151},
+ title = {An avatar-based system for identifying individuals likely to develop dementia},
+ year = {2017}
+}
+
