--- a/_publications/bib/mirheidari2017toward.bib
+++ b/_publications/bib/mirheidari2017toward.bib
@@ -1,1 +1,11 @@
-b"@article{mirheidari2017toward,\n author = {Mirheidari, Bahman and Blackburn, Daniel and Harkness, Kirsty and Walker, Traci and Venneri, Annalena and Reuber, Markus and Christensen, Heidi},\n journal = {Journal of Alzheimer's Disease},\n number = {2},\n pages = {373--387},\n publisher = {IOS Press},\n title = {Toward the automation of diagnostic conversation analysis in patients with memory complaints},\n volume = {58},\n year = {2017}\n}\n\n"
+@article{mirheidari2017toward,
+ author = {Mirheidari, Bahman and Blackburn, Daniel and Harkness, Kirsty and Walker, Traci and Venneri, Annalena and Reuber, Markus and Christensen, Heidi},
+ journal = {Journal of Alzheimer's Disease},
+ number = {2},
+ pages = {373--387},
+ publisher = {IOS Press},
+ title = {Toward the automation of diagnostic conversation analysis in patients with memory complaints},
+ volume = {58},
+ year = {2017}
+}
+
