--- a/_publications/bib/panacoustic.bib
+++ b/_publications/bib/panacoustic.bib
@@ -1,1 +1,6 @@
-b"@inproceedings{panacoustic,\n author = {Pan, Yilinl and Mirheidari, Bahman and Tu, Zehai and O'Malley, Ronan and Walker, Traci and Venneri, Annalena and Reuber, Markus and Blackburn, Dan and Christensen, Heidi},\n booktitle = {Interspeech},\n title = {Acoustic feature extraction with interpretable deep neural network for neurodegenerative related disorder classification}\n}\n\n"
+@inproceedings{panacoustic,
+ author = {Pan, Yilinl and Mirheidari, Bahman and Tu, Zehai and O'Malley, Ronan and Walker, Traci and Venneri, Annalena and Reuber, Markus and Blackburn, Dan and Christensen, Heidi},
+ booktitle = {Interspeech},
+ title = {Acoustic feature extraction with interpretable deep neural network for neurodegenerative related disorder classification}
+}
+
