--- a/_publications/bib/portet2015perspectives.bib
+++ b/_publications/bib/portet2015perspectives.bib
@@ -1,1 +1,11 @@
-b'@article{portet2015perspectives,\n author = {Portet, Fran{\\c{c}} Ois and Christensen, Heidi and Rudzicz, Frank and Alexandersson, Jan},\n journal = {ACM Transactions on Accessible Computing (TACCESS)},\n number = {2},\n pages = {1--8},\n publisher = {ACM New York, NY, USA},\n title = {Perspectives on Speech and Language Interaction for Daily Assistive Technology: Overall Introduction to the Special Issue Part 3},\n volume = {7},\n year = {2015}\n}\n\n'
+@article{portet2015perspectives,
+ author = {Portet, Fran{\c{c}} Ois and Christensen, Heidi and Rudzicz, Frank and Alexandersson, Jan},
+ journal = {ACM Transactions on Accessible Computing (TACCESS)},
+ number = {2},
+ pages = {1--8},
+ publisher = {ACM New York, NY, USA},
+ title = {Perspectives on Speech and Language Interaction for Daily Assistive Technology: Overall Introduction to the Special Issue Part 3},
+ volume = {7},
+ year = {2015}
+}
+
