--- a/_publications/bib/rudzicz2015perspectives.bib
+++ b/_publications/bib/rudzicz2015perspectives.bib
@@ -1,1 +1,11 @@
-b'@article{rudzicz2015perspectives,\n author = {Rudzicz, Frank and Christensen, Heidi and Portet, Fran{\\c{c}}ois and Alexandersson, Jan},\n journal = {ACM Transactions on Accessible Computing (TACCESS)},\n number = {4},\n pages = {1--2},\n publisher = {ACM New York, NY, USA},\n title = {Perspectives on Speech and Language Interaction for Daily Assistive Technology: Introduction to Part 2\xe2\x80\x94Speaking and Reading Aids},\n volume = {6},\n year = {2015}\n}\n\n'
+@article{rudzicz2015perspectives,
+ author = {Rudzicz, Frank and Christensen, Heidi and Portet, Fran{\c{c}}ois and Alexandersson, Jan},
+ journal = {ACM Transactions on Accessible Computing (TACCESS)},
+ number = {4},
+ pages = {1--2},
+ publisher = {ACM New York, NY, USA},
+ title = {Perspectives on Speech and Language Interaction for Daily Assistive Technology: Introduction to Part 2—Speaking and Reading Aids},
+ volume = {6},
+ year = {2015}
+}
+
