--- a/_publications/bib/vasquez2017multi.bib
+++ b/_publications/bib/vasquez2017multi.bib
@@ -1,1 +1,8 @@
-b'@inproceedings{vasquez2017multi,\n author = {Vasquez-Correa, Juan Camilo and Orozco-Arroyave, Juan Rafael and Arora, Raman and N{\\"o}th, Elmar and Dehak, Najim and Christensen, Heidi and Rudzicz, Frank and Bocklet, Tobias and Cernak, Milos and Chinaei, Hamidreza and others},\n booktitle = {Proceedings of 2017 IEEE International Conference on Acoustics, Speech, and Signal Processing (ICASSP 2017)},\n number = {EPFL-CONF-224545},\n title = {Multi-view Representation Learning Via GCCA for Multimodal Analysis of Parkinson\'s Disease},\n year = {2017}\n}\n\n'
+@inproceedings{vasquez2017multi,
+ author = {Vasquez-Correa, Juan Camilo and Orozco-Arroyave, Juan Rafael and Arora, Raman and N{\"o}th, Elmar and Dehak, Najim and Christensen, Heidi and Rudzicz, Frank and Bocklet, Tobias and Cernak, Milos and Chinaei, Hamidreza and others},
+ booktitle = {Proceedings of 2017 IEEE International Conference on Acoustics, Speech, and Signal Processing (ICASSP 2017)},
+ number = {EPFL-CONF-224545},
+ title = {Multi-view Representation Learning Via GCCA for Multimodal Analysis of Parkinson's Disease},
+ year = {2017}
+}
+
