--- a/_publications/bib/walker2020developing.bib
+++ b/_publications/bib/walker2020developing.bib
@@ -1,1 +1,11 @@
-b'@article{walker2020developing,\n author = {Walker, Traci and Christensen, Heidi and Mirheidari, Bahman and Swainston, Thomas and Rutten, Casey and Mayer, Imke and Blackburn, Daniel and Reuber, Markus},\n journal = {Dementia},\n number = {4},\n pages = {1173--1188},\n publisher = {SAGE Publications Sage UK: London, England},\n title = {Developing an intelligent virtual agent to stratify people with cognitive complaints: A comparison of human--patient and intelligent virtual agent--patient interaction},\n volume = {19},\n year = {2020}\n}\n\n'
+@article{walker2020developing,
+ author = {Walker, Traci and Christensen, Heidi and Mirheidari, Bahman and Swainston, Thomas and Rutten, Casey and Mayer, Imke and Blackburn, Daniel and Reuber, Markus},
+ journal = {Dementia},
+ number = {4},
+ pages = {1173--1188},
+ publisher = {SAGE Publications Sage UK: London, England},
+ title = {Developing an intelligent virtual agent to stratify people with cognitive complaints: A comparison of human--patient and intelligent virtual agent--patient interaction},
+ volume = {19},
+ year = {2020}
+}
+
